// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppVersion dispatches the proper actions calculates path correctly on the client too 1`] = `
Object {
  "activityLastSeen": 0,
  "appSlug": undefined,
  "isPublic": undefined,
  "pagePath": "/such/path",
  "selectedTab": "details",
  "versionId": undefined,
}
`;

exports[`AppVersion displays a new activity marker badge 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Version Details
  </Connect(ShipHead)>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={992}
    >
      <_default
        linkAsPrefix="/apps/some-app/versions/a-version-id/"
        linkHrefPrefix="/version?appSlug=some-app&versionId=a-version-id&selectedTab="
        selectedTab="details"
        tabs={
          Array [
            Object {
              "label": "details",
              "showBadge": false,
            },
            Object {
              "label": "devices",
              "showBadge": false,
            },
            Object {
              "label": "qa",
              "showBadge": false,
            },
            Object {
              "label": "activity",
              "showBadge": true,
            },
          ]
        }
      />
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={992}
      paddingHorizontal="x4"
    >
      <Connect(AppVersionDetails)
        appSlug="some-app"
        versionId="a-version-id"
      />
      <AddonFooter
        addonName="Ship"
        paddingVertical="x16"
      />
    </Flex>
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the activity tab correctly 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Version Activity
  </Connect(ShipHead)>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={992}
    >
      <_default
        linkAsPrefix="/apps/some-app/versions/a-version-id/"
        linkHrefPrefix="/version?appSlug=some-app&versionId=a-version-id&selectedTab="
        selectedTab="activity"
        tabs={
          Array [
            Object {
              "label": "details",
              "showBadge": false,
            },
            Object {
              "label": "devices",
              "showBadge": false,
            },
            Object {
              "label": "qa",
              "showBadge": false,
            },
            Object {
              "label": "activity",
              "showBadge": true,
            },
          ]
        }
      />
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={992}
      paddingHorizontal="x4"
    >
      <Connect(Activity)
        appSlug="some-app"
        versionId="a-version-id"
      />
      <AddonFooter
        addonName="Ship"
        paddingVertical="x16"
      />
    </Flex>
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the details tab correctly 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Version Details
  </Connect(ShipHead)>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={992}
    >
      <_default
        linkAsPrefix="/apps/some-app/versions/a-version-id/"
        linkHrefPrefix="/version?appSlug=some-app&versionId=a-version-id&selectedTab="
        selectedTab="details"
        tabs={
          Array [
            Object {
              "label": "details",
              "showBadge": false,
            },
            Object {
              "label": "devices",
              "showBadge": false,
            },
            Object {
              "label": "qa",
              "showBadge": false,
            },
            Object {
              "label": "activity",
              "showBadge": true,
            },
          ]
        }
      />
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={992}
      paddingHorizontal="x4"
    >
      <Connect(AppVersionDetails)
        appSlug="some-app"
        versionId="a-version-id"
      />
      <AddonFooter
        addonName="Ship"
        paddingVertical="x16"
      />
    </Flex>
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the devices tab correctly 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Test Devices
  </Connect(ShipHead)>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={992}
    >
      <_default
        linkAsPrefix="/apps/some-app/versions/a-version-id/"
        linkHrefPrefix="/version?appSlug=some-app&versionId=a-version-id&selectedTab="
        selectedTab="devices"
        tabs={
          Array [
            Object {
              "label": "details",
              "showBadge": false,
            },
            Object {
              "label": "devices",
              "showBadge": false,
            },
            Object {
              "label": "qa",
              "showBadge": false,
            },
            Object {
              "label": "activity",
              "showBadge": true,
            },
          ]
        }
      />
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={992}
      paddingHorizontal="x4"
    >
      <Connect(AppVersionDevices) />
      <AddonFooter
        addonName="Ship"
        paddingVertical="x16"
      />
    </Flex>
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the other tabs correctly 1`] = `
<Fragment>
  <Connect(ShipHead)>
    Version Details
  </Connect(ShipHead)>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={992}
    >
      <_default
        linkAsPrefix="/apps/some-app/versions/a-version-id/"
        linkHrefPrefix="/version?appSlug=some-app&versionId=a-version-id&selectedTab="
        selectedTab="whateever"
        tabs={
          Array [
            Object {
              "label": "details",
              "showBadge": false,
            },
            Object {
              "label": "devices",
              "showBadge": false,
            },
            Object {
              "label": "qa",
              "showBadge": false,
            },
            Object {
              "label": "activity",
              "showBadge": true,
            },
          ]
        }
      />
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={992}
      paddingHorizontal="x4"
    >
      <h1>
        whateever
      </h1>
      <AddonFooter
        addonName="Ship"
        paddingVertical="x16"
      />
    </Flex>
  </Flex>
</Fragment>
`;

exports[`AppVersion renders the qa tab correctly 1`] = `
<Fragment>
  <Connect(ShipHead)>
    QA
  </Connect(ShipHead)>
  <Flex
    direction="vertical"
    grow={true}
  >
    <Base
      maxWidth={992}
    >
      <_default
        linkAsPrefix="/apps/some-app/versions/a-version-id/"
        linkHrefPrefix="/version?appSlug=some-app&versionId=a-version-id&selectedTab="
        selectedTab="qa"
        tabs={
          Array [
            Object {
              "label": "details",
              "showBadge": false,
            },
            Object {
              "label": "devices",
              "showBadge": false,
            },
            Object {
              "label": "qa",
              "showBadge": false,
            },
            Object {
              "label": "activity",
              "showBadge": true,
            },
          ]
        }
      />
    </Base>
    <Divider
      color="gray-2"
      direction="horizontal"
      width="1px"
    />
    <Flex
      direction="vertical"
      grow={true}
      maxWidth={992}
      paddingHorizontal="x4"
    >
      <_default />
      <AddonFooter
        addonName="Ship"
        paddingVertical="x16"
      />
    </Flex>
  </Flex>
</Fragment>
`;
